[tool.poetry]
name = "app_caesar_cipher"
version = "0.1.0"
description = ""
authors = ["chudilo4 <chipalinchik@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flake8 = "^6.0.0"
pytest = "^7.2.0"
pytest-cov = "^4.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
